--- a/.github/workflows/build-and-deploy-node-bindings.yml
+++ b/.github/workflows/build-and-deploy-node-bindings.yml
@@ -411,11 +411,10 @@ jobs:
           image: multiarch/alpine:aarch64-latest-stable
           options: "-v ${{ github.workspace }}/${{ env.SUBDIRECTORY }}:/build -v ${{ github.workspace }}/test-specs:/test-specs -v ${{ github.workspace }}/test-data:/test-data -w /build"
           run: |
-            set -e 
             apk upgrade ; apk update ; apk add nodejs npm yarn
             apk add libfaketime --repository=https://dl-cdn.alpinelinux.org/alpine/edge/testing
             export FAKETIME="2023-01-18 15:15:00" 
-            LD_PRELOAD=/usr/lib/aarch64-linux-gnu/faketime/libfaketime.so.1yarn test
+            LD_PRELOAD=/usr/lib/aarch64-linux-gnu/faketime/libfaketime.so.1 yarn test || exit 1
   test-linux-arm-gnueabihf-binding:
     name: Test bindings on armv7-unknown-linux-gnueabihf - node@${{ matrix.node }}
     needs:
