update python and node projects to have better package names ahead of release, update workflows to release the packages

--- a/node-attestation-bindings/package.json
+++ b/node-attestation-bindings/package.json
@@ -1,10 +1,10 @@
 {
-  "name": "attestation-doc-validation",
-  "version": "0.0.0",
+  "name": "evervault-attestation-bindings",
+  "version": "0.1.0-alpha.1",
   "main": "index.js",
   "types": "index.d.ts",
   "napi": {
-    "name": "attestation-doc-validation",
+    "name": "evervault-attestation-bindings",
     "triples": {
       "additional": [
         "aarch64-apple-darwin",
