--- a/.github/workflows/build-and-deploy-python-bindings.yml
+++ b/.github/workflows/build-and-deploy-python-bindings.yml
@@ -57,9 +57,26 @@ jobs:
   release:
     name: Release
     runs-on: ubuntu-latest
-    if: "startsWith(github.ref, 'refs/tags/')"
+    if: ${{ startsWith(github.ref,'refs/tags/python/v') }}
     needs: [macos, windows, linux]
     steps:
+      - name: Get version from tag
+        id: get-version
+        run: |
+          echo "using version tag ${GITHUB_REF:16}"
+          echo "name=version::${GITHUB_REF:16}\n" >> $GITHUB_OUTPUT
+      - uses: actions/checkout@v3
+      - name: Assert versions match
+        run: |
+          cd python-attestation-bindings
+          PACKAGE_VERSION=$(cat pyproject.toml | grep "version" | xargs -n1' ' | tail -n1)
+          if [ "$PACKAGE_VERSION" != "${{ env.TAG_VERSION }}" ]; then
+            echo "Version in tag does not match package.json"
+            echo "Expected $PACKAGE_VERSION, Found ${{ env.TAG_VERSION }}"
+            exit 1
+          fi
+        env:
+          TAG_VERSION: steps.get-version.outputs.version
       - uses: actions/download-artifact@v3
         with:
           name: wheels
