--- a/python-attestation-bindings/pyproject.toml
+++ b/python-attestation-bindings/pyproject.toml
@@ -3,7 +3,8 @@ requires = ["maturin>=0.14,<0.15"]
 build-backend = "maturin"
 
 [project]
-name = "python-attestation-bindings"
+name = "evervault-attestation-bindings"
+version = "0.1.0a1"
 requires-python = ">=3.7"
 classifiers = [
     "Programming Language :: Rust",
