--- a/python-attestation-bindings/Makefile.toml
+++ b/python-attestation-bindings/Makefile.toml
@@ -16,11 +16,11 @@ command = "cargo"
 args = ["check"]
 
 [tasks.test]
-command = "cargo"
+command = "maturin"
 args = ["test"]
 
 [tasks.build]
-command = "cargo"
+command = "maturin"
 args = ["build"]
 
 [tasks.ci]
