update lint and test workflow to use maturin actions to build python

--- a/python-attestation-bindings/Makefile.toml
+++ b/python-attestation-bindings/Makefile.toml
@@ -24,4 +24,4 @@ command = "maturin"
 args = ["build"]
 
 [tasks.ci]
-dependencies = ["lint","format","check","test","build"]
+dependencies = ["lint","format","check"]
