--- a/.github/workflows/lint-and-test.yml
+++ b/.github/workflows/lint-and-test.yml
@@ -32,3 +32,12 @@ jobs:
         run: cd ${{ matrix.package }} ; cargo make ci
         env:
           RUST_BACKTRACE: full
+  build_and_test_python:
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v3
+      - uses: PyO3/maturin-action@v1
+        with:
+          command: build
+          args: --release -o dist --universal2 --find-interpreter
+          working-directory: python-attestation-bindings
