--- a/.github/workflows/build-and-deploy-node-bindings.yml
+++ b/.github/workflows/build-and-deploy-node-bindings.yml
@@ -515,6 +515,7 @@ jobs:
       - uses: actions/checkout@v3
       - name: Assert versions match
         run: |
+          cd ${{ env.SUBDIRECTORY }}
           PACKAGE_VERSION=$(cat package.json | jq .version | tr -d '"')
           if [ "$PACKAGE_VERSION" != "${{ env.TAG_VERSION }}" ]; then
             echo "Version in tag does not match package.json"
