correct release workflows

--- a/.github/workflows/build-and-deploy-python-bindings.yml
+++ b/.github/workflows/build-and-deploy-python-bindings.yml
@@ -81,7 +81,8 @@ jobs:
           TAG_VERSION: ${{ steps.get-version.outputs.version }}
       - uses: actions/download-artifact@v3
         with:
-          name: python-attestation-bindings/wheels
+          path: python-attestation-bindings
+          name: wheels
       - name: Publish to PyPI
         uses: PyO3/maturin-action@v1
         env:
