--- a/node-attestation-bindings/package.json
+++ b/node-attestation-bindings/package.json
@@ -41,5 +41,7 @@
     "universal": "napi universal",
     "version": "napi version"
   },
-  "packageManager": "yarn@3.3.1"
+  "packageManager": "yarn@3.3.1",
+  "repository": "https://github.com/evervault/attestation-doc-validation",
+  "description": "Node bindings to the Evervault attestation doc validation crate"
 }
