--- a/.github/workflows/build-and-deploy-node-bindings.yml
+++ b/.github/workflows/build-and-deploy-node-bindings.yml
@@ -185,7 +185,7 @@ jobs:
             npm install --location=global --ignore-scripts yarn
             curl https://sh.rustup.rs -sSf --output rustup.sh
             sh rustup.sh -y --profile minimal --default-toolchain stable
-            export PATH="/usr/local/cargo/bin:$PATH"
+            source "/usr/local/cargo/env"
             echo "~~~~ rustc --version ~~~~"
             rustc --version
             echo "~~~~ node -v ~~~~"
@@ -193,7 +193,7 @@ jobs:
             echo "~~~~ yarn --version ~~~~"
             yarn --version
           run: |
-            export PATH="/usr/local/cargo/bin:$PATH"
+            source "/usr/local/cargo/env"
             pwd
             ls -lah
             whoami
@@ -204,7 +204,7 @@ jobs:
             yarn install
             yarn build
             ls
-            cwd
+            pwd
             strip -x *.node
             yarn test
             rm -rf node_modules
