update test in makefile to remove faketime install

--- a/attestation-doc-validation/Makefile.toml
+++ b/attestation-doc-validation/Makefile.toml
@@ -19,14 +19,8 @@ args = ["check"]
 command = "cargo"
 args = ["test","--","--skip","time_sensitive"]
 
-[tasks.add_lib_faketime]
-script = '''
-sudo apt-get install -y libfaketime
-'''
-
 [tasks.test_time_sensitive]
-dependencies = ["add_lib_faketime"]
-env = { "LD_PRELOAD" = "/usr/lib/x86_64-linux-gnu/faketime/libfaketime.so.1", "FAKETIME" = "2023-01-18 15:15:00" }
+env = { "FAKETIME" = "1674054914" }
 command = "cargo"
 args = ["test","time_sensitive"]
 
