cargo build before install

--- a/.github/workflows/build-and-deploy-node-bindings.yml
+++ b/.github/workflows/build-and-deploy-node-bindings.yml
@@ -200,6 +200,7 @@ jobs:
             freebsd-version
             cd node-attestation-bindings
             ls
+            cargo build
             yarn install
             yarn build
             ls
