--- a/.github/workflows/build-and-deploy-node-bindings.yml
+++ b/.github/workflows/build-and-deploy-node-bindings.yml
@@ -126,6 +126,9 @@ jobs:
       - name: Add msbuild to PATH
         if: ${{ matrix.settings.target == 'aarch64-pc-windows-msvc' }}
         uses: microsoft/setup-msbuild@v1.1
+      - name: Add msys2
+        if: ${{ matrix.settings.target == 'aarch64-pc-windows-msvc' }}
+        uses: msys2/setup-msys2@v2
       - name: Setup toolchain
         run: ${{ matrix.settings.setup }}
         if: ${{ matrix.settings.setup }}
