get actions to use clang to allow for ring compilation of arm64 windows

--- a/.github/workflows/build-and-deploy-node-bindings.yml
+++ b/.github/workflows/build-and-deploy-node-bindings.yml
@@ -126,9 +126,16 @@ jobs:
       - name: Add msbuild to PATH
         if: ${{ matrix.settings.target == 'aarch64-pc-windows-msvc' }}
         uses: microsoft/setup-msbuild@v1.1
-      - name: Add msys2
+      - name: Setup ring dependencies on windows
         if: ${{ matrix.settings.target == 'aarch64-pc-windows-msvc' }}
-        uses: msys2/setup-msys2@v2
+        shell: pwsh
+        run: |
+          choco install activeperl nasm
+          $Env:PATH += ";$Env:ProgramFiles\NASM"
+          $VSINSTALLDIR = $(vswhere.exe -latest -requires Microsoft.VisualStudio.Component.VC.Llvm.Clang -property installationPath)
+          $VCINSTALLDIR = Join-Path $VSINSTALLDIR "VC"
+          $LLVM_ROOT = Join-Path $VCINSTALLDIR "Tools\Llvm\x64"
+          echo "PATH=$Env:PATH;${LLVM_ROOT}\bin" >> $Env:GITHUB_ENV
       - name: Setup toolchain
         run: ${{ matrix.settings.setup }}
         if: ${{ matrix.settings.setup }}
