--- a/attestation-doc-validation/Cargo.toml
+++ b/attestation-doc-validation/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "attestation-doc-validation"
-version = "0.4.3"
+version = "0.4.4"
 edition = "2021"
 license = "Apache-2.0"
 description = "A Rust library for attesting enclaves according to the Evervault Attestation scheme. This crate is used to generate ffi bindings."
@@ -20,7 +20,7 @@ thiserror = "1.0"
 serde_cbor = "0.11"
 hex = "0.4.3"
 base64 = "0.21"
-serde_bytes = "0.11"
+serde_bytes = "0.11"#[cfg(not(feature = "tls_server"))]
 serde = { version = "1.0", features = ["derive"] }
 serde_with = "2.2"
 
