--- a/python-attestation-bindings/pyproject.toml
+++ b/python-attestation-bindings/pyproject.toml
@@ -4,7 +4,7 @@ build-backend = "maturin"
 
 [project]
 name = "evervault_attestation_bindings"
-version = "0.1.0a5"
+version = "0.2.0"
 requires-python = ">=3.6"
 classifiers = [
     "Programming Language :: Rust",
