try fix version parsing

--- a/.github/workflows/tmp-debug-version-check.yml
+++ b/.github/workflows/tmp-debug-version-check.yml
@@ -14,5 +14,5 @@ jobs:
       - name: Assert versions match
         run: |
           cd python-attestation-bindings
-          PACKAGE_VERSION=$(cat pyproject.toml | grep "version" | xargs -n1 -d ' ' | tail -n1)
+          PACKAGE_VERSION=$(cat pyproject.toml | awk -F '=' '/version/ {gsub(/"/, "", $2); gsub(/ /, "", $2); print $2}')
           echo $PACKAGE_VERSION
