--- a/go-attestation-bindings/Cargo.toml
+++ b/go-attestation-bindings/Cargo.toml
@@ -1,8 +1,13 @@
 [package]
-name = "go-attestation-bindings"
+name = "rustdemo"
 version = "0.1.0"
 edition = "2021"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
+[lib]
+crate-type = ["cdylib"]
+
 [dependencies]
+libc = "0.2"
+sha256 = "1.0.3"
