--- a/kotlin-attestation-bindings/Cargo.toml
+++ b/kotlin-attestation-bindings/Cargo.toml
@@ -8,6 +8,7 @@ name = "bindings"
 crate-type = ["cdylib"]
 
 [dependencies]
+attestation-doc-validation = "0.6.0"
 uniffi = { version = "0.24.1" }
 
 [build-dependencies]
