--- a/.github/workflows/build-and-deploy-python-bindings.yml
+++ b/.github/workflows/build-and-deploy-python-bindings.yml
@@ -48,7 +48,7 @@ jobs:
       - uses: PyO3/maturin-action@v1
         with:
           command: build
-          args: --release -o dist --universal2 --find-interpreter
+          args: --release -o dist --find-interpreter --target universal2-apple-darwin
           working-directory: python-attestation-bindings
       - name: Upload wheels
         uses: actions/upload-artifact@v3
