--- a/attestation-doc-validation/Cargo.toml
+++ b/attestation-doc-validation/Cargo.toml
@@ -19,8 +19,8 @@ thiserror = "1.0"
 serde_cbor = "0.11"
 hex = "0.4.3"
 base64 = "0.21"
-serde_bytes = "0.11"#[cfg(not(feature = "tls_server"))]
-serde = { version = "1.0", features = ["derive"] }
+serde_bytes = "0.11"
+serde = { version = "=1.0.180", features = ["derive"] } #Fixed due to regression https://github.com/awslabs/aws-nitro-enclaves-cose/issues/62
 serde_with = "2.2"
 webpki = { version = "0.22", features = ["alloc"] }
 x509-parser = "0.14.0"
